app/assets/stylesheets/home.scss
.navbared{

	min-height: 62px;
	padding-top: 10px;
	background-color: #182634;
	padding-left: 15px;
	padding-right: 20px;

}

.all-peegin{
	margin-top: 130px;
}
.altered{
	margin-top: 109px;
	margin-bottom: -100px;

}

.alert-notice{
	background-color: #dff0d8;
	border-color: #d6e9c6;
	color: #3c763d;
}

.alert-alert{
	background-color: #f0d8d8;
	border-color: #e9c6c6;
	color: #763c3c;
}

.error-val{
	border: 1px solid #f0d8d8 ;
	border-radius: 4px;
	padding-bottom: 10px;
	padding-top: 10px;
}

div.col-sm-2{
	width: 10.2%;
}

.input-group{
	width: 74%;
	float: right;
	margin-top: -4px;
}

.search-mobile{
	width: 90%;
	margin-right: 40px;
	margin-bottom: 11px;
	margin-top: 1px;
}

.navbar-btn{

	margin-top: 3px;
	margin-bottom: 0px
}

.btns{

	margin-left: 10px;
}

.btn1{

	margin-right: 0px;
}

.side-bar,.titled{

	font-weight: 900;
	font-size: 26px;
	line-height:1.45;
	display: inline;
	font-family: 'Lora', serif;
}
#side,.titled{
	background-color: #FAD93D;
}
.ui-mobile{
	float: right;
}

.heading{
	float: left;
	background-color: #FAD93D;
	line-height:1.45;
	display: inline;
	font-weight: 700;
	font-size: 15px;
	line-break: strict;
	padding: 0 5px;
}

.helper-b{
	float: left;
	background-color: #182634;
	padding: 5px;
	border: 1px solid #182634;
	border-radius: 4px;
}
.helper-b.btn2{
	padding: 9px;
	background: #02a882;
	border: 1px solid #FAD93D;
	color: #FAD93D;

}

button.close.mob {
	margin-bottom: 5px;
}

body{
	height: auto;
	background-color: #f1f1f1;
}

a {
	text-decoration: none !important;

	color: #02a882;

}

.button-link{

}

.create-peegin{
	background-color: #182634;
	margin-top: 10px;
	font-size: 1em;
	border-color: #182634;
}


.side-panel{
	background-color: #02a882;


}
.described{
	font-size: 18px;
}
.exampled{

	font-style: italic;
}

.origin{
	color: #FAD93D;
	font-style: italic;
	background-color: #182634;
	display: inline;
	padding: 3px;
	font-weight: bold;
}
.peegined{
	padding: 0 20px;
}

.socialed{
	display: inline;
	float: right;
	color: #02a882;
}

.haterz{
	display: inline;
	float: left;
	margin-right: 10px;
}


.hate{

	margin-left: -35px;
}

.score{
margin-left: 8px;
color: #02a882 !important;

}

.modal-backdrop.in { z-index: auto;}

.modal-header{
	text-align: center;

}


.modal-title{

	color: #182634;
}


.btn-primary,.btn-default:hover {
	border-color: #3a434c;
	background-color: #3a434c;
}


input[type=text],[type=email],[type=password] {
    width: 100%;
    padding: 12px 20px;
		margin: 8px 0;
    box-sizing: border-box;
		border: 2px solid #ccc;
    border-radius: 4px;
		background: #f1f1f1;

}

textarea.eg-h{
		height: 80px;
		margin: 0 0 20px 0;
}

input[type=text].tl-h,input[type=text].og-h{
		  margin: 0 0 20px 0;

}

input[type=text].search-pad{
		padding: 5px 20px;
		background: #fff;
}

input[type=text].mn-h{
		  margin: 0 0 20px 0;
}

.search-margin{
	margin: 8px
}
textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
		margin: 0 0 20px 0;
    resize: none;
		background: #f1f1f1;
}

.devise-share{
	margin-top: 50px;
}

.dropdown-menu{
	right: -80px !important;
	left: auto;
	height: 100px;
	min-width: 200px;
	text-align: center;
	border: 1px solid rgba(0, 0, 0, 0);
	padding: 15px 0;
	background-color: #d8d8d8;
}

.mobile-drop{
	left: -80px;
	text-align: center;
	}

.pagination > .active > span {
	background-color: #02a882;
	border-color: #02a882;
}

.pagination > li > a {
	color: #02a882;
}

.pagination > li > a:hover {
color: #182634;
}

.pagination > .active > span, .pagination > .active > span:hover{
	background-color: #182634;
	border-color: #182634;
}

footer.page-footer {
	background: #182634;
	padding:30px 0 10px 0;
	color: #FAD93D;
	width: 100%;
  margin-top:50px;
}
.center-footer{
	text-align: center;
	display: block;
	margin-top: -20px;
}
.copy-right {
	color: #FAD93D;
}
@media only screen and (max-width: 768px)
and (max-width : 982px){
  .socialed {
  	margin-top: -25px;
  }

	.peegined{
		padding: 0;
	}
	.altered{
		margin-top: 120px;
		margin-bottom: -100px;

	}

	.helper-b.btn2 {
    float: right;
}
	.navbar-fixed-top.sessions.new, .registrations.edit, .peegins.new, .registrations.new{
		position: absolute;
	}
}

@media (max-width : 991px){

	.all-peegin {
  	margin-top: 120px;
  }

	.formed {
		padding-left: 0;
		padding-right: 0;
		margin-bottom: 100px;
	}
  .socialed {
  	margin-top: -5px;
  }

	.signing{
		color: black;
	}
	.container {
		width: 100%;
	}

	.altered{
		margin-top: 120px;
		margin-bottom: -100px;

	}
	.center-footer{
		margin-top: 25px;
	}
	footer.page-footer {
	padding-left: 13px;
	padding-right: 13px;
	}
	.col-xs-12, .col-sm-12,.col-md-8 {
		padding-left: 0px;
		padding-right: 0px;
	}
}

